# recibo-poem-printer

./: .gitignore  BUILD_YOUR_OWN.rst  README.rst  ROADMAP.rst  flash_drive.sh  pyproject.toml
files/mnt/information/: footer.txt
src/: __init__.py  flash_path.py  get_content.py  get_controller.py  get_file_group.py  get_flash_drive.py  get_keypress.py  get_path.py  get_text_content.py  print_file.py  print_text.py  printer.py  printer_print.py  read_file.py  set_controller.py
src/files/information/: header.txt
src/files/poems/: multirao-de-amor.txt  poem.txt
src/files/short-stories/: short.txt
tests/: test_casa1.py
