[tool.poetry]
name = "Poem Printer"
version = "0.1.0"
description = ""
authors = ["Angelo Dias <oiangelodias@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
escpos = "^1.8"
curtsies = "^0.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
